tests/bad_programs/semantic_errors/main_missing.notc
// Not really a type error, but the type checker is able to catch it first

int not_main() {
    return 0;
}
